--- a/afm.html
+++ b/afm.html
@@ -8,43 +8,103 @@
   </head>
   <body>
     <div id="app">
-      <div class="nav-header__topbar">
-        <div class="review">
-          <span>Klanten waarderen ons met een 9.0</span>
-          <div class="rating">
-            <img src="/template/images/star.png" />
-            <img src="/template/images/star.png" />
-            <img src="/template/images/star.png" />
-            <img src="/template/images/star.png" />
-            <img src="/template/images/star.png" />
+      <header>
+        <div class="nav-header__topbar">
+          <div class="review">
+            <span>Klanten waarderen ons met een 9.0</span>
+            <div class="rating">
+              <img src="/template/images/star.png" />
+              <img src="/template/images/star.png" />
+              <img src="/template/images/star.png" />
+              <img src="/template/images/star.png" />
+              <img src="/template/images/star.png" />
+            </div>
+            <span>110 reviews</span>
           </div>
-          <span>110 reviews</span>
+          <div class="contact__menu">
+            <ul>
+              <li>
+                <img src="/template/images/phone.png" />
+                <a href="call:0854015737">085-401 57 37</a>
+              </li>
+              <li>
+                <img src="/template/images/mail.png" />
+                <a href="mailto:info@thuisborg.nl">info@thuisborg.nl</a>
+              </li>
+              <li>
+                <img src="/template/images/account.png" />
+                <a href="">Login</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="contact__menu">
+        <div class="nav-header__menu">
+          <a class="logo" href="/">
+            <img src="/template/images/logo.png" alt="Thuisborg" />
+          </a>
+          <div class="nav-header__right-cont">
+            <ul class="nav-header__menu__items">
+              <li>
+                <a href="/verzilveren"> Verzilveren </a>
+                <ul>
+                  <li>
+                    <a href="verzilveren">Overwaarde verzilveren</a>
+                  </li>
+                  <li>
+                    <a href="woningwaarde-calculator">Woningwaarde calculator</a>
+                  </li>
+                  <li>
+                    <a href="5-stappenplan">5-stappenplan verzilveren</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="/zorgwoning"> Zorgwoning </a>
+                <ul>
+                  <li>
+                    <a href="/zorgwoning">Zorgwoningen</a>
+                  </li>
+                  <li>
+                    <a href="/zorgwoning-45">Zorgwoning 45</a>
+                  </li>
+                  <li><a href="/zorgwoning-63">Zorgwoning 63</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="/investeren"> Investeren </a>
+              </li>
+              <li>
+                <a href="/over-ons"> Over ons </a>
+              </li>
+              <li>
+                <a href="/nieuws"> Nieuws </a>
+              </li>
+              <li>
+                <a href="/faq"> FAQ </a>
+              </li>
+              <li>
+                <a href="/contact"> Contact </a>
+              </li>
+              <li>
+                <a href="bekijk-uw-mogelijkheden" class="btn" ref="navcta"> Bekijk uw mogelijkheden </a>
+              </li>
+            </ul>
+            <div class="nav-header__search" :class="[{'open': $store.getters.getSearch}]">
+              <span class="search__cta" @click="toggleSearch()">
+                <img src="/template/images/search.png" alt="" />
+              </span>
+              <form class="search__form">
+                <input type="text" name="search" placeholder="type here" />
+                <button class="btn white">zoek</button>
+              </form>
+            </div>
+            <hamburger></hamburger>
+          </div>
+        </div>
+        <div class="nav-menu__mobile" :class="[{'is-open': $store.getters.getNav}, {'is-closed': !$store.getters.getNav}]">
           <ul>
-            <li>
-              <img src="/template/images/phone.png" />
-              <a href="call:0854015737">085-401 57 37</a>
-            </li>
-            <li>
-              <img src="/template/images/mail.png" />
-              <a href="mailto:info@thuisborg.nl">info@thuisborg.nl</a>
-            </li>
-            <li>
-              <img src="/template/images/account.png" />
-              <a href="">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="nav-header__menu">
-        <a class="logo" href="/">
-          <img src="/template/images/logo.png" alt="Thuisborg" />
-        </a>
-        <div class="nav-header__right-cont">
-          <ul class="nav-header__menu__items">
-            <li>
-              <a href="/verzilveren"> Verzilveren </a>
+            <li v-toggler="{ toggler: 'js__toggle__handle', className: 'opened'}" class="has-children">
+              <span class="js__toggle__handle"> Verzilveren </span>
               <ul>
                 <li>
                   <a href="verzilveren">Overwaarde verzilveren</a>
@@ -57,9 +117,8 @@
                 </li>
               </ul>
             </li>
-            <li>
-              <a href="/zorgwoning"> Zorgwoning </a>
-
+            <li v-toggler="{ toggler: 'js__toggle__handle', className: 'opened'}" class="has-children">
+              <span class="js__toggle__handle"> Zorgwoning </span>
               <ul>
                 <li>
                   <a href="/zorgwoning">Zorgwoningen</a>
@@ -77,86 +136,34 @@
               <a href="/over-ons"> Over ons </a>
             </li>
             <li>
+              <a href="/nieuws"> Nieuws </a>
+            </li>
+            <li>
               <a href="/faq"> FAQ </a>
             </li>
             <li>
               <a href="/contact"> Contact </a>
             </li>
             <li>
-              <a href="bekijk-uw-mogelijkheden" class="btn"> Bekijk uw mogelijkheden </a>
+              <a href="bekijk-uw-mogelijkheden" class="btn">Bekijk uw mogelijkheden</a>
             </li>
           </ul>
-          <div class="nav-header__search" :class="[{'open': $store.getters.getSearch}]">
-            <span class="search__cta" @click="toggleSearch()">
-              <img src="/template/images/search.png" alt="" />
-            </span>
-            <form class="search__form">
-              <input type="text" name="search" placeholder="type here" />
-              <button class="btn white">zoek</button>
-            </form>
-          </div>
-          <hamburger></hamburger>
+          <ul>
+            <li>
+              <img src="/template/images/phone.png" />
+              <a href="call:0854015737">085-401 57 37</a>
+            </li>
+            <li>
+              <img src="/template/images/mail.png" />
+              <a href="mailto:info@thuisborg.nl">info@thuisborg.nl</a>
+            </li>
+            <li>
+              <img src="/template/images/account.png" />
+              <a href="">Login</a>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="nav-menu__mobile" :class="[{'is-open': $store.getters.getNav}, {'is-closed': !$store.getters.getNav}]">
-        <ul>
-          <li>
-            <a href="/verzilveren"> Verzilveren </a>
-            <ul>
-              <li>
-                <a href="verzilveren">Overwaarde verzilveren</a>
-              </li>
-              <li>
-                <a href="woningwaarde-calculator">Woningwaarde calculator</a>
-              </li>
-              <li>
-                <a href="5-stappenplan">5-stappenplan verzilveren</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="/zorgwoning"> Zorgwoning </a>
-            <ul>
-              <li>
-                <a href="/zorgwoning">Zorgwoningen</a>
-              </li>
-              <li>
-                <a href="/zorgwoning-45">Zorgwoning 45</a>
-              </li>
-              <li><a href="/zorgwoning-63">Zorgwoning 63</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="/investeren"> Investeren </a>
-          </li>
-          <li>
-            <a href="/over-ons"> Over ons </a>
-          </li>
-          <li>
-            <a href="/faq"> FAQ </a>
-          </li>
-          <li>
-            <a href="/contact"> Contact </a>
-          </li>
-          <li>
-            <a href="bekijk-uw-mogelijkheden" class="btn">Bekijk uw mogelijkheden</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img src="/template/images/phone.png" />
-            <a href="call:0854015737">085-401 57 37</a>
-          </li>
-          <li>
-            <img src="/template/images/mail.png" />
-            <a href="mailto:info@thuisborg.nl">info@thuisborg.nl</a>
-          </li>
-          <li>
-            <img src="/template/images/account.png" />
-            <a href="">Login</a>
-          </li>
-        </ul>
-      </div>
+      </header>
       <main class="main">
         <div class="breadcrumb">
           <div class="standard middle">
