--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 <a href="/over-ons"> Over ons </a>
               </li>
               <li>
+                <a href="/nieuws"> Nieuws </a>
+              </li>
+              <li>
                 <a href="/faq"> FAQ </a>
               </li>
               <li>
@@ -131,6 +134,9 @@
             </li>
             <li>
               <a href="/over-ons"> Over ons </a>
+            </li>
+            <li>
+              <a href="/nieuws"> Nieuws </a>
             </li>
             <li>
               <a href="/faq"> FAQ </a>
