slider homepage done

--- a/index.html
+++ b/index.html
@@ -388,37 +388,7 @@
               <h3 class="section-subtitle">Ervaringen</h3>
               <a href="bekijk-uw-mogelijkheden">Bekijk uw mogelijkheden</a>
             </div>
-            <comment-slider>
-              <div class="comments-slider__list__item">
-                <div class="comments-slider__list__item__comment">
-                  <span class="q">“</span>
-                  <q class="comment-text"
-                    >Ik was op zoek naar mogelijkheden om mijn geld uit de stenen te krijgen en zo mijn inkomsten te kunnen aanvullen en onderhoud aan zijn
-                    woning te laten uitvoeren.</q
-                  >
-                </div>
-                <p>Dhr. Visser - Verzilverde zijn woning</p>
-              </div>
-              <div class="comments-slider__list__item">
-                <div class="comments-slider__list__item__comment">
-                  <span class="q">“</span>
-                  <q class="comment-text"
-                    >Ik was genoodzaakt mijn appartement met huurders te verkopen. Dankzij Thuisborg konden de huurders er blijven wonen.</q
-                  >
-                </div>
-                <p>Dhr. Peters - Verzilverde zijn woning</p>
-              </div>
-              <div class="comments-slider__list__item">
-                <div class="comments-slider__list__item__comment">
-                  <span class="q">“</span>
-                  <q class="comment-text"
-                    >Wij konden geen nieuwe hypotheek krijgen voor het aanpassen van onze woning. Dankzij Thuisborg kunnen wij blijven wonen in onze huidige
-                    woning.</q
-                  >
-                </div>
-                <p>Verzilverden hun woning - doctor</p>
-              </div>
-            </comment-slider>
+            <comment-slider></comment-slider>
           </div>
         </section>
         <section class="invest asym-image-text">
